crates/musq/tests/trybuild/fail_sql_empty_values.stderr
error: empty list
 --> tests/trybuild/fail_sql_empty_values.rs:4:13
  |
4 |     let _ = sql!("SELECT * FROM t WHERE id IN ({values:[]})")?;
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sql` (in Nightly builds, run with -Z macro-backtrace for more info)
