crates/musq/tests/trybuild/fail_sql_empty_values.rs
use musq::*;

fn main() -> musq::Result<()> {
    let _ = sql!("SELECT * FROM t WHERE id IN ({values:[]})")?;
    Ok(())
}
